--- a/index.html
+++ b/index.html
@@ -1,1 +1,127 @@
+<!DOCTYPE html>
+<html lang="en">
+<head>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>{{CLIENT_NAME}} | Private Arrangements</title>
 
+  <!-- Fonts -->
+  <link href="https://fonts.googleapis.com/css2?family=Playfair+Display:wght@500;600&family=Inter:wght@300;400;500&display=swap" rel="stylesheet">
+
+  <link rel="stylesheet" href="styles.css">
+</head>
+
+<body>
+
+  <!-- NAVIGATION -->
+  <nav>
+    <a href="index.html">Home</a>
+    <a href="about.html">About</a>
+    <a href="arrangements.html">Arrangements</a>
+    <a href="gallery.html">Gallery</a>
+    <a href="online-services.html">Online</a>
+    <a href="booking.html">Booking</a>
+  </nav>
+
+  <!-- HERO -->
+  <section class="hero">
+    <div class="hero-inner">
+      <h1>{{CLIENT_NAME}}</h1>
+      <p>{{CLIENT_TAGLINE}}</p>
+      <a href="booking.html" class="button-primary">Request Booking</a>
+    </div>
+  </section>
+
+  <!-- ABOUT SECTION -->
+  <section>
+    <h2>About</h2>
+    <p style="max-width: 700px; margin: 0 auto; text-align:center;">
+      {{ABOUT_INTRO_PARAGRAPH}}
+    </p>
+  </section>
+
+  <!-- ARRANGEMENTS PREVIEW -->
+  <section>
+    <h2>Arrangements</h2>
+
+    <div class="card-grid">
+
+      <div class="card">
+        <h3>{{ARRANGEMENT_TITLE_1}}</h3>
+        <div class="price">{{PRICE_1}}</div>
+        <div class="details">
+          {{SHORT_DESCRIPTION_1}}
+        </div>
+      </div>
+
+      <div class="card">
+        <h3>{{ARRANGEMENT_TITLE_2}}</h3>
+        <div class="price">{{PRICE_2}}</div>
+        <div class="details">
+          {{SHORT_DESCRIPTION_2}}
+        </div>
+      </div>
+
+      <div class="card">
+        <h3>{{ARRANGEMENT_TITLE_3}}</h3>
+        <div class="price">{{PRICE_3}}</div>
+        <div class="details">
+          {{SHORT_DESCRIPTION_3}}
+        </div>
+      </div>
+
+    </div>
+  </section>
+
+  <!-- GALLERY PREVIEW -->
+  <section>
+    <h2>Gallery</h2>
+
+    <div class="gallery-grid">
+      <img src="assets/images/placeholder1.jpg" alt="Gallery image">
+      <img src="assets/images/placeholder2.jpg" alt="Gallery image">
+      <img src="assets/images/placeholder3.jpg" alt="Gallery image">
+      <img src="assets/images/placeholder4.jpg" alt="Gallery image">
+    </div>
+
+  </section>
+
+  <!-- ONLINE SERVICES PREVIEW -->
+  <section>
+    <h2>Online Services</h2>
+
+    <div class="card-grid">
+
+      <div class="card">
+        <h3>{{ONLINE_SERVICE_1}}</h3>
+        <div class="price">{{ONLINE_PRICE_1}}</div>
+        <div class="details">
+          {{ONLINE_DESCRIPTION_1}}
+        </div>
+      </div>
+
+      <div class="card">
+        <h3>{{ONLINE_SERVICE_2}}</h3>
+        <div class="price">{{ONLINE_PRICE_2}}</div>
+        <div class="details">
+          {{ONLINE_DESCRIPTION_2}}
+        </div>
+      </div>
+
+    </div>
+  </section>
+
+  <!-- FINAL CTA -->
+  <section style="text-align:center;">
+    <h2>Discretion. Intention. Alignment.</h2>
+    <a href="booking.html" class="button-primary">Begin Inquiry</a>
+  </section>
+
+  <!-- FOOTER -->
+  <footer>
+    © {{YEAR}} {{CLIENT_NAME}}. All Rights Reserved.
+  </footer>
+
+  <script src="script.js"></script>
+</body>
+</html>
