--- a/gallery.html
+++ b/gallery.html
@@ -1,1 +1,60 @@
+<!DOCTYPE html>
+<html lang="en">
+<head>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>{{CLIENT_NAME}} | Gallery</title>
 
+  <link href="https://fonts.googleapis.com/css2?family=Playfair+Display:wght@500;600&family=Inter:wght@300;400;500&display=swap" rel="stylesheet">
+  <link rel="stylesheet" href="styles.css">
+</head>
+
+<body>
+
+  <nav>
+    <a href="index.html">Home</a>
+    <a href="about.html">About</a>
+    <a href="arrangements.html">Arrangements</a>
+    <a href="gallery.html">Gallery</a>
+    <a href="online-services.html">Online</a>
+    <a href="booking.html">Booking</a>
+  </nav>
+
+  <section class="hero">
+    <div class="hero-inner">
+      <h1>Gallery</h1>
+      <p>{{GALLERY_INTRO_STATEMENT}}</p>
+    </div>
+  </section>
+
+  <section>
+
+    <div class="gallery-grid">
+
+      <!-- Replace with client images -->
+      <img src="assets/images/placeholder1.jpg" alt="Gallery Image 1">
+      <img src="assets/images/placeholder2.jpg" alt="Gallery Image 2">
+      <img src="assets/images/placeholder3.jpg" alt="Gallery Image 3">
+      <img src="assets/images/placeholder4.jpg" alt="Gallery Image 4">
+      <img src="assets/images/placeholder5.jpg" alt="Gallery Image 5">
+      <img src="assets/images/placeholder6.jpg" alt="Gallery Image 6">
+
+    </div>
+
+  </section>
+
+  <section style="text-align:center;">
+    <h2>Private Collection</h2>
+    <p style="max-width:600px; margin:0 auto;">
+      {{GALLERY_DISCRETION_NOTE}}
+    </p>
+    <a href="booking.html" class="button-primary">Request Access</a>
+  </section>
+
+  <footer>
+    © {{YEAR}} {{CLIENT_NAME}}. All Rights Reserved.
+  </footer>
+
+  <script src="script.js"></script>
+</body>
+</html>
