--- a/gallery.html
+++ b/gallery.html
@@ -32,12 +32,12 @@
     <div class="gallery-grid">
 
       <!-- Replace with client images -->
-      <img src="assets/images/placeholder1.jpg" alt="Gallery Image 1">
-      <img src="assets/images/placeholder2.jpg" alt="Gallery Image 2">
-      <img src="assets/images/placeholder3.jpg" alt="Gallery Image 3">
-      <img src="assets/images/placeholder4.jpg" alt="Gallery Image 4">
-      <img src="assets/images/placeholder5.jpg" alt="Gallery Image 5">
-      <img src="assets/images/placeholder6.jpg" alt="Gallery Image 6">
+      <img src="assets/images/placeholder1.jpg.PNG" alt="Gallery Image 1">
+      <img src="assets/images/placeholder2.jpg.PNG" alt="Gallery Image 2">
+      <img src="assets/images/placeholder3.jpg.PNG" alt="Gallery Image 3">
+      <img src="assets/images/placeholder4.jpg.PNG" alt="Gallery Image 4">
+      <img src="assets/images/placeholder5.jpg.PNG" alt="Gallery Image 5">
+      <img src="assets/images/placeholder6.jpg.PNG" alt="Gallery Image 6">
 
     </div>
 
