--- a/arrangements.html
+++ b/arrangements.html
@@ -20,15 +20,21 @@
     <a href="booking.html">Booking</a>
   </nav>
 
+  <!-- HERO -->
   <section class="hero">
     <div class="hero-inner">
       <h1>Arrangements</h1>
       <p>{{ARRANGEMENT_INTRO_STATEMENT}}</p>
+
+      <p style="margin-top:15px; color: var(--muted-text);">
+        {{ARRANGEMENT_DISCRETION_NOTE}}
+      </p>
+
     </div>
   </section>
 
+  <!-- ARRANGEMENTS GRID -->
   <section>
-
     <div class="card-grid">
 
       <!-- ARRANGEMENT CARD 1 -->
@@ -71,7 +77,6 @@
       </div>
 
     </div>
-
   </section>
 
   <footer>
