Demo toggle added

--- a/index.html
+++ b/index.html
@@ -57,6 +57,13 @@
     © {{YEAR}} {{CLIENT_NAME}}. All Rights Reserved.
   </footer>
 
+  <!-- DEMO THEME SWITCHER (REMOVE FOR CLIENT DELIVERY) -->
+  <div class="theme-switcher">
+    <button data-theme="">Light</button>
+    <button data-theme="dark-theme">Dark</button>
+    <button data-theme="soft-theme">Soft</button>
+  </div>
+
   <script src="script.js"></script>
 </body>
 </html>
