--- a/index.html
+++ b/index.html
@@ -58,12 +58,17 @@
   </footer>
 
   <!-- DEMO THEME SWITCHER (REMOVE FOR CLIENT DELIVERY) -->
-  <div class="theme-switcher">
-    <button data-theme="">Light</button>
-    <button data-theme="dark-theme">Dark</button>
-    <button data-theme="soft-theme">Soft</button>
-  </div>
-
+  
+<div class="theme-switcher">
+  <button data-theme="">Light</button>
+  <button data-theme="dark-theme">Dark</button>
+  <button data-theme="soft-theme">Soft</button>
+  <button data-theme="midnight-theme">Midnight</button>
+  <button data-theme="champagne-theme">Champagne</button>
+  <button data-theme="power-theme">Power</button>
+  <button data-theme="rose-noir-theme">Rose Noir</button>
+</div>
+  
   <script src="script.js"></script>
 </body>
 </html>
