Theme switcher added

--- a/index.html
+++ b/index.html
@@ -60,15 +60,19 @@
   <!-- DEMO THEME SWITCHER (REMOVE FOR CLIENT DELIVERY) -->
   
 <div class="theme-switcher">
-  <button data-theme="">Light</button>
-  <button data-theme="dark-theme">Dark</button>
-  <button data-theme="soft-theme">Soft</button>
-  <button data-theme="midnight-theme">Midnight</button>
-  <button data-theme="champagne-theme">Champagne</button>
-  <button data-theme="power-theme">Power</button>
-  <button data-theme="rose-noir-theme">Rose Noir</button>
+
+  <div class="swatch" data-theme="" style="background:#f8f6f2;"></div>
+  <div class="swatch" data-theme="dark-theme" style="background:#111111;"></div>
+  <div class="swatch" data-theme="soft-theme" style="background:#fff6f9;"></div>
+  <div class="swatch" data-theme="midnight-theme" style="background:#0d0f1c;"></div>
+  <div class="swatch" data-theme="champagne-theme" style="background:#f2e6d8;"></div>
+  <div class="swatch" data-theme="power-theme" style="background:#1c1c1c;"></div>
+  <div class="swatch" data-theme="rose-noir-theme" style="background:#2b1f28;"></div>
+  <div class="swatch" data-theme="emerald-theme" style="background:#1f7a5c;"></div>
+  <div class="swatch" data-theme="warm-neutral-theme" style="background:#b58a5f;"></div>
+  <div class="swatch" data-theme="mauve-theme" style="background:#b76e8a;"></div>
+
 </div>
-  
   <script src="script.js"></script>
 </body>
 </html>
