--- a/index.html
+++ b/index.html
@@ -57,20 +57,40 @@
     © {{YEAR}} {{CLIENT_NAME}}. All Rights Reserved.
   </footer>
 
-  <!-- DEMO THEME SWITCHER (REMOVE FOR CLIENT DELIVERY) -->
-  
+  <!-- LUXURY AESTHETIC PREVIEW SWITCHER (REMOVE FOR CLIENT DELIVERY) -->
 <div class="theme-switcher">
 
-  <div class="swatch" data-theme="" style="background:#f8f6f2;"></div>
-  <div class="swatch" data-theme="dark-theme" style="background:#111111;"></div>
-  <div class="swatch" data-theme="soft-theme" style="background:#fff6f9;"></div>
-  <div class="swatch" data-theme="midnight-theme" style="background:#0d0f1c;"></div>
-  <div class="swatch" data-theme="champagne-theme" style="background:#f2e6d8;"></div>
-  <div class="swatch" data-theme="power-theme" style="background:#1c1c1c;"></div>
-  <div class="swatch" data-theme="rose-noir-theme" style="background:#2b1f28;"></div>
-  <div class="swatch" data-theme="emerald-theme" style="background:#1f7a5c;"></div>
-  <div class="swatch" data-theme="warm-neutral-theme" style="background:#b58a5f;"></div>
-  <div class="swatch" data-theme="mauve-theme" style="background:#b76e8a;"></div>
+  <div class="theme-label">Preview Aesthetic</div>
+
+  <div class="swatch" data-theme=""
+       style="background:linear-gradient(135deg,#f8f6f2,#c6a47e);"></div>
+
+  <div class="swatch" data-theme="dark-theme"
+       style="background:linear-gradient(135deg,#111111,#b48bff);"></div>
+
+  <div class="swatch" data-theme="soft-theme"
+       style="background:linear-gradient(135deg,#fff6f9,#d88aa6);"></div>
+
+  <div class="swatch" data-theme="midnight-theme"
+       style="background:linear-gradient(135deg,#0d0f1c,#4c5cff);"></div>
+
+  <div class="swatch" data-theme="champagne-theme"
+       style="background:linear-gradient(135deg,#f2e6d8,#d6b98c);"></div>
+
+  <div class="swatch" data-theme="power-theme"
+       style="background:linear-gradient(135deg,#1c1c1c,#d4af37);"></div>
+
+  <div class="swatch" data-theme="rose-noir-theme"
+       style="background:linear-gradient(135deg,#2b1f28,#a14566);"></div>
+
+  <div class="swatch" data-theme="emerald-theme"
+       style="background:linear-gradient(135deg,#0f1a16,#1f7a5c);"></div>
+
+  <div class="swatch" data-theme="warm-neutral-theme"
+       style="background:linear-gradient(135deg,#f3ede6,#b58a5f);"></div>
+
+  <div class="swatch" data-theme="mauve-theme"
+       style="background:linear-gradient(135deg,#f7eef3,#b76e8a);"></div>
 
 </div>
   <script src="script.js"></script>
