--- a/index.html
+++ b/index.html
@@ -89,8 +89,8 @@
   <div class="swatch" data-theme="warm-neutral-theme"
        style="background:linear-gradient(135deg,#f3ede6,#b58a5f);"></div>
 
-  <div class="swatch" data-theme="mauve-theme"
-       style="background:linear-gradient(135deg,#f7eef3,#b76e8a);"></div>
+<div class="swatch" data-theme="mauve-theme"
+     style="background:linear-gradient(135deg,#efe2e8,#8f4b63);"></div>
 
 </div>
   <script src="script.js"></script>
