--- a/index.html
+++ b/index.html
@@ -62,35 +62,45 @@
 
   <div class="theme-label">Preview Aesthetic</div>
 
+  <!-- 01 — Light Luxury (Default) -->
   <div class="swatch" data-theme=""
        style="background:linear-gradient(135deg,#f8f6f2,#c6a47e);"></div>
 
-  <div class="swatch" data-theme="dark-theme"
-       style="background:linear-gradient(135deg,#111111,#b48bff);"></div>
-
-  <div class="swatch" data-theme="soft-theme"
-       style="background:linear-gradient(135deg,#fff6f9,#d88aa6);"></div>
-
-  <div class="swatch" data-theme="midnight-theme"
-       style="background:linear-gradient(135deg,#0d0f1c,#4c5cff);"></div>
-
+  <!-- 02 — Champagne Neutral -->
   <div class="swatch" data-theme="champagne-theme"
-       style="background:linear-gradient(135deg,#f2e6d8,#d6b98c);"></div>
+       style="background:linear-gradient(135deg,#f5efe6,#b89b72);"></div>
 
-  <div class="swatch" data-theme="power-theme"
-       style="background:linear-gradient(135deg,#1c1c1c,#d4af37);"></div>
-
-  <div class="swatch" data-theme="rose-noir-theme"
-       style="background:linear-gradient(135deg,#2b1f28,#a14566);"></div>
-
-  <div class="swatch" data-theme="emerald-theme"
-       style="background:linear-gradient(135deg,#0f1a16,#1f7a5c);"></div>
-
+  <!-- 03 — Warm Neutral -->
   <div class="swatch" data-theme="warm-neutral-theme"
        style="background:linear-gradient(135deg,#f3ede6,#b58a5f);"></div>
 
-<div class="swatch" data-theme="mauve-theme"
-     style="background:linear-gradient(135deg,#efe2e8,#8f4b63);"></div>
+  <!-- 04 — Soft Feminine -->
+  <div class="swatch" data-theme="soft-theme"
+       style="background:linear-gradient(135deg,#fff6f9,#d88aa6);"></div>
+
+  <!-- 05 — Deep Mauve -->
+  <div class="swatch" data-theme="mauve-theme"
+       style="background:linear-gradient(135deg,#efe2e8,#8f4b63);"></div>
+
+  <!-- 06 — Emerald Luxe -->
+  <div class="swatch" data-theme="emerald-theme"
+       style="background:linear-gradient(135deg,#0f1a16,#1f7a5c);"></div>
+
+  <!-- 07 — Rose Noir -->
+  <div class="swatch" data-theme="rose-noir-theme"
+       style="background:linear-gradient(135deg,#2b1f28,#a14566);"></div>
+
+  <!-- 08 — Dark Luxury -->
+  <div class="swatch" data-theme="dark-theme"
+       style="background:linear-gradient(135deg,#111111,#b48bff);"></div>
+
+  <!-- 09 — Midnight Editorial -->
+  <div class="swatch" data-theme="midnight-theme"
+       style="background:linear-gradient(135deg,#0c0c0f,#c4a15a);"></div>
+
+  <!-- 10 — Power Minimal -->
+  <div class="swatch" data-theme="power-theme"
+       style="background:linear-gradient(135deg,#ffffff,#000000);"></div>
 
 </div>
   <script src="script.js"></script>
