--- a/gallery.html
+++ b/gallery.html
@@ -6,7 +6,8 @@
   <title>{{CLIENT_NAME}} | Gallery</title>
 
   <link href="https://fonts.googleapis.com/css2?family=Playfair+Display:wght@500;600&family=Inter:wght@300;400;500&display=swap" rel="stylesheet">
-  <link rel="stylesheet" href="styles.css">
+  <link rel="stylesheet" href="core.css">
+  <link rel="stylesheet" href="identities.css">
 </head>
 
 <body>
