--- a/index.html
+++ b/index.html
@@ -6,7 +6,9 @@
   <title>{{CLIENT_NAME}} | Private Arrangements</title>
 
   <link href="https://fonts.googleapis.com/css2?family=Playfair+Display:wght@500;600&family=Inter:wght@300;400;500&display=swap" rel="stylesheet">
-  <link rel="stylesheet" href="styles.css">
+  <link rel="stylesheet" href="core.css">
+  <link rel="stylesheet" href="identities.css">
+  <link rel="stylesheet" href="demo-switcher.css">
 </head>
 
 <body>
