--- a/index.html
+++ b/index.html
@@ -105,6 +105,7 @@
        style="background:linear-gradient(135deg,#ffffff,#000000);"></div>
 
 </div>
-  <script src="script.js"></script>
+<script src="core.js"></script>
+<script src="demo-engine.js"></script>
 </body>
 </html>
