--- a/about.html
+++ b/about.html
@@ -90,6 +90,7 @@
     © {{YEAR}} {{CLIENT_NAME}}. All Rights Reserved.
   </footer>
 
-  <script src="script.js"></script>
+  <script src="core.js"></script>
+<script src="demo-engine.js"></script>
 </body>
 </html>
