--- a/gallery.html
+++ b/gallery.html
@@ -56,6 +56,7 @@
     © {{YEAR}} {{CLIENT_NAME}}. All Rights Reserved.
   </footer>
 
-  <script src="script.js"></script>
+  <script src="core.js"></script>
+<script src="demo-engine.js"></script>
 </body>
 </html>
