--- a/index.html
+++ b/index.html
@@ -62,7 +62,10 @@
   <!-- LUXURY AESTHETIC PREVIEW SWITCHER (REMOVE FOR CLIENT DELIVERY) -->
 <div class="theme-switcher">
 
-  <div class="theme-label">Preview Aesthetic</div>
+  <div class="theme-label">
+  Aesthetic:
+  <span id="active-identity">The Heiress</span>
+  </div>
 
   <!-- 01 — Light Luxury (Default) -->
   <div class="swatch" data-theme=""
