--- a/index.html
+++ b/index.html
@@ -76,8 +76,8 @@
        style="background:linear-gradient(135deg,#f5efe6,#b89b72);"></div>
 
   <!-- 03 — Warm Neutral -->
-  <div class="swatch" data-theme="warm-neutral-theme"
-       style="background:linear-gradient(135deg,#f3ede6,#b58a5f);"></div>
+<div class="swatch" data-theme="warm-neutral-theme"
+     style="background:linear-gradient(135deg,#0e1a2b,#c6a75e);"></div>
 
   <!-- 04 — Soft Feminine -->
   <div class="swatch" data-theme="soft-theme"
