--- a/index.html
+++ b/index.html
@@ -77,8 +77,7 @@
 
   <!-- 03 — Warm Neutral -->
 <div class="swatch" data-theme="warm-neutral-theme"
-     style="background:linear-gradient(135deg,#0e1a2b,#c6a75e);"></div>
-
+     style="background:linear-gradient(135deg,#0b1e3a,#d4af37);"></div>
   <!-- 04 — Soft Feminine -->
   <div class="swatch" data-theme="soft-theme"
        style="background:linear-gradient(135deg,#fff6f9,#d88aa6);"></div>
